Set up neatjs for lazy loading/single function loading. It's looking sexy, haven't tested browser loading yet. :)

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "mocha": "1.1.x",
-    "should": "1.1.x"
+    "should": "1.1.x",
+  "xml2js" : "0.2.x"
   }
 }
