--- a/package.json
+++ b/package.json
@@ -1,11 +1,23 @@
 {
-  "name": "neat-test",
-  "description": "Neat tests with Mocha",
-  "version": "0.0.1",
-  "private": true,
-  "dependencies": {
-    "mocha": "1.1.x",
-    "should": "1.1.x",
-  "xml2js" : "0.2.x"
-  }
+    "name": "neat",
+    "description": "NeuroEvolution of Augmenting Topologies (NEAT) implemented in Javascript (with tests done in Mocha for verification). Can be used as a node module or in a browser",
+    "keywords": ["Neural Network", "NN", "Artificial Neural Networks", "ANN", "CPPN", "NEAT", "HyperNEAT"],
+    "author" : { "name": "Paul Szerlip",
+        "email": "Paul.Szerlip@cs.ucf.edu",
+        "url": "http://designforcode.com/" },
+    "version": "0.2",
+    "main":"neatjs.js",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/OptimusLime/neatjs.git"
+    },
+    "bugs" : "https://github.com/OptimusLime/neatjs/issues",
+    "license":"MIT",
+    "private": true,
+    "dependencies": {
+        "cppnjs" : "0.x.x",
+        "mocha": "1.1.x",
+        "should": "1.1.x",
+        "xml2js" : "0.2.x"
+    }
 }
