--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "author" : { "name": "Paul Szerlip",
         "email": "Paul.Szerlip@cs.ucf.edu",
         "url": "http://designforcode.com/" },
-    "version": "0.2.2",
+    "version": "0.2.2-2",
     "main":"neatjs.js",
     "repository": {
         "type": "git",
