--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "neatjs",
-  "version": "0.3.0",
+  "version": "0.3.0-1",
   "description": "NeuroEvolution of Augmenting Topologies (NEAT) implemented in Javascript (with tests done in Mocha for verification). Can be used as a node module or in a browser",
   "keywords": [
     "Neural Network",
@@ -25,7 +25,7 @@
   "license": "MIT",
   "dependencies": {
     "cppnjs": "0.x.x",
-    "win-utils" : "*"
+    "win-utils": "*"
   },
   "devDependencies": {
     "mocha": "1.1.x",
